--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -101,9 +101,8 @@
     "Use your standalone_driver.py driver to start. You want to update this driver, called rtk_driver.py, to read data from an RTK GNSS unit.\n",
     "\n",
     "Your complete driver rtk_driver.py should: \n",
-    "- Read in and parse a GNGGA string into latitude, longitude, UTC, and HDOP\n",
-    "- Convert latitude and longitude into UTM values using the UTM package from Lab 1\n",
-    "- Publish lat/lon data in a STANDARD message type called NavSatFix: https://docs.ros.org/en/melodic/api/sensor_msgs/html/msg/NavSatFix.html This message should have a:\n",
+    "- Read in and parse a GNGGA string into latitude, longitude, altitude, UTC, fix quality, and HDOP\n",
+    "- Publish lat/lon data in a Sensors message type called NavSatFix: https://docs.ros.org/en/melodic/api/sensor_msgs/html/msg/NavSatFix.html This message should have a:\n",
     "    - header (type: Header)\n",
     "        - header.frame_id should be 'GPS1_Frame' (type: string)\n",
     "        - header.stamp.sec should be UTC **from the GNSS** converted to epoch time. Please do not use system time for UTC, but you will need to use system time to get epoch time to the current day. (type: uint32)\n",
@@ -181,14 +180,14 @@
     "- Can you explain why this result is the case? What does this say about GPS navigation with our receiver when moving vs. stationary? \n",
     "- What is the difference between standalone and RTK data deviation?\n",
     "- Can you explain why you observer these differences between standalone and RTK deviation?\n",
-    "- How are your moving data different in the open and occluded cases? Does this have anything to do with GNSS fix quality?\n",
-    "- How are your stationary data different in the open and occluded cases? Does this have anything to do with GNSS fix quality?\n",
+    "- How are your moving data and numerical error estimate different in the open and occluded cases? Does this have anything to do with GNSS fix quality?\n",
+    "- How are your stationary data and numerical error estimate  different in the open and occluded cases? Does this have anything to do with GNSS fix quality?\n",
     "\n"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "619c56d0",
+   "cell_type": "markdown",
+   "id": "dfff82e0-4b45-4691-9f42-74f5f14ae91a",
    "metadata": {},
    "source": [
     "### Lab Scoring\n",
@@ -238,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
