--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "Lab 2 further delves into GNSS analysis and introduces real time kinematic (RTK) GNSS. You will use your GNSS data from Lab 1 to compare standalone GNSS data and a ROSbag with RTK GNSS data. You will also further analyze walking and stationary data that you collected and from the ROSbag.\n",
+    "Lab 2 further delves into GNSS analysis and introduces real time kinematic (RTK) GNSS. You will use your GNSS data from Lab 1 to compare standalone GNSS data and RTK GNSS data. You will also further analyze walking and stationary data collected using RTK GPS.\n",
     "\n",
     "By the end of this lab, we expect that a well-prepared student will be able to: \n",
     "- Read data from a .bag file \n",
@@ -54,7 +54,7 @@
     "\n",
     "| EECE5554 | | | | | |\n",
     "| :----- | :----- | :----- | :----- | :----- | :----- |\n",
-    "| | gnss/ | | | |\n",
+    "| | lab2/ | | | |\n",
     "| | | src/ | | | |\n",
     "| | | | gps_driver/ | | |\n",
     "| | | | | CMakeLists.txt | |\n",
@@ -112,8 +112,9 @@
     "You should also copy your Customgps.msg file to a new message, Customrtk.msg and add the fields:\n",
     "- <code>fix_quality</code> (as an int)\n",
     "- <code>hdop</code> (as a float64)\n",
-    "  \n",
-    "You will not actually collect RTK data (our hardware units are very fussy), but you will read in and process messages from some ROS bags that the course staff have collected. The topic is /rtk_gnss."
+    "\n",
+    "\n",
+    "You will not actually collect RTK data (our hardware units are very fussy), but you will read in and process messages using the sensor emulator with the '.txt' files (present in 'lab2/dataset') that the course staff have collected and processed. Please check the README in 'lab2/dataset' for more details on how to run the emulator with the provided datasets."
    ]
   },
   {
