Updated repo name back to gnss

--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "| EECE5554 | | | | | |\n",
     "| :----- | :----- | :----- | :----- | :----- | :----- |\n",
-    "| | lab2/ | | | |\n",
+    "| | gnss/ | | | |\n",
     "| | | src/ | | | |\n",
     "| | | | gps_driver/ | | |\n",
     "| | | | | CMakeLists.txt | |\n",
