update table for repo structure

--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -64,15 +64,15 @@
     "| | | | | | rtk_driver.py | \n",
     "| | | | | msg/ | | \n",
     "| | | | | | Customgps.msg | \n",
-    "| | | | | | Customrtk.msg\n",
+    "| | | | | | Customrtk.msg |\n",
     "| | | | | launch/ | | \n",
     "| | | | | | standalone_driver.launch |\n",
     "| | | | | | rtk_driver.launch |\n",
     "| | | analysis/ | | | |\n",
     "| | | | your analysis scripts | | |\n",
-    "| | | data/ | |\n",
+    "| | | data/ | | | |\n",
     "| | | | your .bag files | | |\n",
-    "| | | | your .bag file from occludedrtk.txt | |\n"
+    "| | | | your .bag file from occludedrtk.txt | | |\n"
    ]
   },
   {
