--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -66,8 +66,8 @@
     "| | | | | | Customgps.msg | \n",
     "| | | | | | Customrtk.msg |\n",
     "| | | | | launch/ | | \n",
-    "| | | | | | standalone_driver.launch |\n",
-    "| | | | | | rtk_driver.launch |\n",
+    "| | | | | | standalone_driver_launch.py |\n",
+    "| | | | | | rtk_driver_launch.py |\n",
     "| | | analysis/ | | | |\n",
     "| | | | your analysis scripts | | |\n",
     "| | | data/ | | | |\n",
