--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "### Step 2: Write a launch file and make the driver accept any port\n",
     "\n",
-    "Create a launch file called <code>rtk_driver.launch</code> in your launch directory. This launch file will have the same structure as Lab 1, so you will only need to modify the name and driver name. "
+    "Create a launch file called <code>rtk_driver_launch.py</code> in your launch directory. This launch file will have the same structure as Lab 1, so you will only need to modify the name and driver name. "
    ]
   },
   {
