--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -12,7 +12,7 @@
     "Lab 2 further delves into GNSS analysis and introduces real time kinematic (RTK) GNSS. You will use your GNSS data from Lab 1 to compare standalone GNSS data and RTK GNSS data. You will also further analyze walking and stationary data collected using RTK GPS.\n",
     "\n",
     "By the end of this lab, we expect that a well-prepared student will be able to: \n",
-    "- Read data from a .bag file \n",
+    "- Read data from a rosbag \n",
     "- Select and apply appropriate statistical analysis types to easting and northing data\n",
     "- Analyze data using appropriate statistical and plotting tools in Python\n",
     "- Discuss results and appropriately identify sources of error in data sets\n",
