Updated repository structure

--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -52,27 +52,19 @@
     "\n",
     "Your Github repo should look like the table below. **Please note that your build and devel directories should not be pushed to Git!**\n",
     "\n",
-    "| EECE5554 | | | | | |\n",
-    "| :----- | :----- | :----- | :----- | :----- | :----- |\n",
-    "| | gnss/ | | | | |\n",
-    "| | | src/ | | | |\n",
-    "| | | | gps_driver/ | | |\n",
-    "| | | | | CMakeLists.txt | |\n",
-    "| | | | | package.xml  | |\n",
-    "| | | | | python/ | | \n",
-    "| | | | | | standalone_driver.py | \n",
-    "| | | | | | rtk_driver.py | \n",
-    "| | | | | msg/ | | \n",
-    "| | | | | | Customgps.msg | \n",
-    "| | | | | | Customrtk.msg |\n",
-    "| | | | | launch/ | | \n",
-    "| | | | | | standalone_driver_launch.py |\n",
-    "| | | | | | rtk_driver_launch.py |\n",
-    "| | | analysis/ | | | |\n",
-    "| | | | your analysis scripts | | |\n",
-    "| | | data/ | | | |\n",
-    "| | | | your .bag files | | |\n",
-    "| | | | your .bag file from occludedrtk.txt | | |\n"
+    "<pre>\n",
+    "EECE5554  \n",
+    "├── gnss  \n",
+    "    ├── src  \n",
+    "    │   └── everything in your src folder (this includes the gnss and rtk packages and custom messages)  \n",
+    "    ├── analysis  \n",
+    "    │   └── your analysis scripts  \n",
+    "    └── data  \n",
+    "        ├── your .bag files  \n",
+    "        └── your .bag file from occludedrtk.txt  \n",
+    "</pre>\n",
+    "\n",
+    "\n"
    ]
   },
   {
