--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -184,8 +184,9 @@
     "\n",
     "| Driver | 10 pct | Points | \n",
     "| :---- | :---- | :---- |\n",
-    "| | Processes GNGGA and adds fix quality and hdop | 5 | \n",
-    "| | Correct ROS message structure with Customrtk.msg | 5 | \n",
+    "| | Processes GNGGA and adds fix quality and hdop | 3 | \n",
+    "| | Correct ROS message structure with Customrtk.msg | 3 | \n",
+    "| | Working launch file that conforms to naming convention listed above | 4 | \n",
     "| Analysis and Report | 90 pct | | \n",
     "| | Plots: Stationary RTK northing vs. easting plots  | 2.5 | \n",
     "| | Plots: Stationary RTK altitude plot  | 2.5 | \n",
