--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "You will need to follow the naming convention laid out here to have an appropriate structure that can be checked by the Lab 2 autograder and to receive credit for your work. Please make sure you are following these conventions **exactly**-- spaces and capitalization matter!\n",
     "\n",
-    "Your Github repo should look like the table below. **Please note that your build and devel directories should not be pushed to Git!**\n",
+    "Your Github repo should look like the table below. **Please note that your build and install directories should not be pushed to Git!**\n",
     "\n",
     "<pre>\n",
     "EECE5554  \n",
