--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -56,7 +56,7 @@
     "EECE5554  \n",
     "├── gnss  \n",
     "    ├── src  \n",
-    "    │   └── everything in your src folder (this includes the gnss and rtk packages and custom messages)  \n",
+    "    │   └── everything in your src folder (this includes the gps_driver & rtk_driver packages, and custom messages packages if any)  \n",
     "    ├── analysis  \n",
     "    │   └── your analysis scripts  \n",
     "    └── data  \n",
