--- a/Lab2-GNSS-RTK.ipynb
+++ b/Lab2-GNSS-RTK.ipynb
@@ -60,8 +60,8 @@
     "    ├── analysis  \n",
     "    │   └── your analysis scripts  \n",
     "    └── data  \n",
-    "        ├── your .bag files  \n",
-    "        └── your .bag file from occludedrtk.txt  \n",
+    "        ├── your bag files   \n",
+    "        └── your bag file from occludedrtk.txt  \n",
     "</pre>\n",
     "\n",
     "\n"
